added the reset button to the first pitch activity header

--- a/src/index.html
+++ b/src/index.html
@@ -297,6 +297,9 @@
             <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
             </button>
+            <button class="reset-activity-button" @click="resetCurrentActivity(this)" aria-label="Reset current activity progress" title="Reset Progress">
+              <span style="font-size: 20px;">🔄</span>
+            </button>
           </div>
           
           <!-- Play button - bird in background -->
