--- a/src/index.html
+++ b/src/index.html
@@ -358,6 +358,9 @@
             <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
             </button>
+            <button class="reset-activity-btn" @click="resetCurrentActivity()" aria-label="Reset current activity progress" title="Reset Progress">
+              <span style="font-size: 20px;">🔄</span>
+            </button>
           </div>
           
           <!-- Play button - only show when not in game mode -->
@@ -417,6 +420,9 @@
             <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
             </button>
+            <button class="reset-activity-btn" @click="resetCurrentActivity()" aria-label="Reset current activity progress" title="Reset Progress">
+              <span style="font-size: 20px;">🔄</span>
+            </button>
           </div>
           
           <div style="height:52vw"></div>
@@ -438,6 +444,9 @@
           <div class="mode-header">
             <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
+            </button>
+            <button class="reset-activity-btn" @click="resetCurrentActivity()" aria-label="Reset current activity progress" title="Reset Progress">
+              <span style="font-size: 20px;">🔄</span>
             </button>
           </div>
 
@@ -477,6 +486,9 @@
           <div class="mode-header">
             <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
+            </button>
+            <button class="reset-activity-btn" @click="resetCurrentActivity()" aria-label="Reset current activity progress" title="Reset Progress">
+              <span style="font-size: 20px;">🔄</span>
             </button>
           </div>
           <button class="circular-play-button" @click="playCurrentMelody()" aria-label="Play Melody" title="Play Melody">
