1_1: der reset button in der navi reset geht jetzt
WIP: ui update der anzeige

--- a/src/index.html
+++ b/src/index.html
@@ -918,7 +918,7 @@
         <p><a href="https://eclabs.de" target="_blank">Eastcoast Laboratories</a></p>
         
         <h3>Grafiken & Illustrationen</h3>
-        <p>Grafiken erstellt mit ChatGpt</p>
+        <p>Images created with ChatGpt mindfull. Loving prompts</p>
         
         <h3>Technologien</h3>
         <ul>
