--- a/homepage/index.html
+++ b/homepage/index.html
@@ -338,7 +338,7 @@
                     🍎 App Store
                     <small style="display: block; font-size: 0.8rem; margin-top: 0.2rem;">Bald verfügbar</small>
                 </a>
-                <a href="https://play.google.com/store/apps/details?id=eu.lalumo.app" class="download-btn">
+                <a href="https://play.google.com/store/apps/details?id=com.lalumo.app" class="download-btn">
                     🤖 Google Play Store
                 </a>
             </div>
