--- a/homepage/index.html
+++ b/homepage/index.html
@@ -341,6 +341,15 @@
                 <a href="https://play.google.com/store/apps/details?id=com.lalumo.app" class="download-btn">
                     🤖 Google Play Store
                 </a>
+                <a href="https://f-droid.org/packages/com.lalumo.app" class="download-btn">
+                    <img src="https://fdroid.gitlab.io/artwork/badge/get-it-on.png" alt="F-Droid" style="height: 20px; margin-right: 6px; vertical-align: middle;">F-Droid
+                </a>
+            </div>
+            <div style="margin-top: 1rem; text-align: center;">
+                <a href="https://github.com/rubo77/Lalumo" class="github-link" style="color: #fdcb6e; text-decoration: underline; display: inline-flex; align-items: center;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="margin-right: 5px;" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                    Open Source auf GitHub
+                </a>
             </div>
         </div>
     </header>
@@ -426,10 +435,14 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
+            <div class="footer-legal">
+                <a href="impressum.html">Impressum</a>
+                <a href="datenschutz.html">Datenschutz</a>
+                <a href="agb.html">AGB</a>
+                <a href="https://github.com/rubo77/Lalumo">GitHub</a>
+                <a href="https://f-droid.org/packages/com.lalumo.app">F-Droid</a>
+            </div>
             <div class="footer-links">
-                <a href="impressum.html" class="footer-link">Impressum</a>
-                <a href="datenschutz.html" class="footer-link">Datenschutz</a>
-                <a href="agb.html" class="footer-link">AGB</a>
                 <a href="mailto:support@lalumo.eu" class="footer-link">Kontakt</a>
             </div>
             
