--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
 
           <!-- chords started developed-->
           <button @click="active = 'chords'; $dispatch('set-chord-mode', 'main')" :class="{ 'active': active === 'chords' }"
-          style="display: none;">
+          style="opacity: 0;">
             <span x-text="$store.strings?.menu_chords || 'Chords'"></span>
           </button>
 
