--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
 
         <div class="menu-chapters" x-show="!isChordChapterUnlocked">
           <!-- locked chords button with padlock (visible when not unlocked) -->
-          <button @click="active = 'referral-code'" :class="{ 'active': active === 'referral-code' }" class="locked-chapter">
+          <button @click="active = 'referral-code'; window.innerWidth < 1024 ? menuOpen = false : null" :class="{ 'active': active === 'referral-code' }" class="locked-chapter">
             <span>🔒 <span x-text="$store.strings?.menu_chords || 'Chords'"></span></span>
           </button>
         </div>
@@ -976,7 +976,22 @@
                 <button class="secondary-button" @click="copyReferralCode()" x-text="$store.strings?.copy_referral_code || 'Copy Code'"></button>
               </div>
               <div class="referral-actions">
-                <p class="referral-status" x-text="'Status: ' + (referralCount || '0') + '/3 ' + ($store.strings?.referrals_received || 'referrals received')"></p>
+                <div class="referral-stats">
+                  <p class="referral-status">
+                    <strong><span x-text="$store.strings?.registrations || 'Registrations'"></span>:</strong>
+                    <span x-text="(referralCount || '0') + '/3'"></span>
+                    <template x-if="referralCount >= 3">
+                      <span class="referral-unlocked">✓ <span x-text="$store.strings?.chords_unlocked || 'Chords unlocked!'"></span></span>
+                    </template>
+                  </p>
+                  <p class="referral-status">
+                    <strong><span x-text="$store.strings?.link_clicks || 'Link clicks'"></span>:</strong>
+                    <span x-text="referralClickCount || '0'"></span>
+                  </p>
+                  <template x-if="referralCount < 3">
+                    <p class="referral-hint" x-text="$store.strings?.referral_hint || 'Ask your friends to use your code when registering!'"></p>
+                  </template>
+                </div>
                 <button class="primary-button" @click="shareReferralCode()" x-text="$store.strings?.share_app || 'Share App'"></button>
               </div>
             </div>
