--- a/homepage/index.html
+++ b/homepage/index.html
@@ -14,6 +14,12 @@
     <meta property="og:url" content="https://lalumo.eu">
     <meta property="og:type" content="website">
     
+    <!-- Favicon Links -->
+    <link rel="icon" href="./icons/favicon.ico" sizes="any" />
+    <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="./icons/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="./icons/icon-512.png" />
+    
     <!-- App Store Meta Tags -->
     <meta name="apple-itunes-app" content="app-id=YOUR_APP_ID">
     <meta name="google-play-app" content="app-id=YOUR_PACKAGE_NAME">
