--- a/src/index.html
+++ b/src/index.html
@@ -564,26 +564,7 @@
         
         <!-- Main chord activity selection screen -->
         <div x-show="!mode || mode === 'main'" class="chord-landing">
-          <div class="image-map-container">
-            <div class="clickable-area color-matching-area" @click="setMode('2_1_chords_color-matching')" aria-label="Color Matching">
-              <span class="area-label" x-text="$store.strings?.chord_color_matching || 'Chord Color Matching'">Chord Color Matching</span>
-            </div>
-            <div class="clickable-area mood-landscapes-area" @click="setMode('2_2_chords_mood-landscapes')" aria-label="Mood Landscapes">
-              <span class="area-label" x-text="$store.strings?.mood_landscapes || 'Mood Landscapes'">Mood Landscapes</span>
-            </div>
-            <div class="clickable-area chord-building-area" @click="setMode('2_3_chords_chord-building')" aria-label="Chord Building">
-              <span class="area-label" x-text="$store.strings?.chord_building || 'Chord Building'">Chord Building</span>
-            </div>
-            <div class="clickable-area missing-note-area" @click="setMode('2_4_chords_missing-note')" aria-label="Missing Note">
-              <span class="area-label" x-text="$store.strings?.missing_note || 'Guess the Missing Note'">Guess the Missing Note</span>
-            </div>
-            <div class="clickable-area character-matching-area" @click="setMode('2_5_chords_characters')" aria-label="Character Matching">
-              <span class="area-label" x-text="$store.strings?.chord_characters || 'Chord Story Characters'">Chord Story Characters</span>
-            </div>
-            <div class="clickable-area harmony-gardens-area" @click="setMode('2_6_chords_harmony-gardens')" aria-label="Harmony Gardens">
-              <span class="area-label" x-text="$store.strings?.harmony_gardens || 'Harmony Gardens'">Harmony Gardens</span>
-            </div>
-          </div>
+          <div class="image-map-container"></div>
         </div>
         
         <!-- 2_1 Chords - Color Matching Activity -->
