2_1: fix color answer handling

--- a/src/index.html
+++ b/src/index.html
@@ -591,34 +591,44 @@
             
             <div class="color-grid">
               <div class="color-option" 
-                   @click="checkColorAnswer($store, '#FFD700')" 
+                   @click="checkColorAnswer($data, '#FFD700')" 
                    style="background-color: #FFD700;">
                 <span>Major</span>
               </div>
               <div class="color-option" 
-                   @click="checkColorAnswer($store, '#4682B4')" 
+                   @click="checkColorAnswer($data, '#4682B4')" 
                    style="background-color: #4682B4;">
                 <span>Minor</span>
               </div>
               <div class="color-option" 
-                   @click="checkColorAnswer($store, '#800080')" 
+                   @click="checkColorAnswer($data, '#DDA0DD')" 
+                   style="background-color: #DDA0DD;">
+                <span>Major 7</span>
+              </div>
+              <div class="color-option" 
+                   @click="checkColorAnswer($data, '#800080')" 
                    style="background-color: #800080;">
                 <span>Diminished</span>
               </div>
               <div class="color-option" 
-                   @click="checkColorAnswer($store, '#FF4500')" 
+                   @click="checkColorAnswer($data, '#FF4500')" 
                    style="background-color: #FF4500;">
                 <span>Augmented</span>
               </div>
               <div class="color-option" 
-                   @click="checkColorAnswer($store, '#32CD32')" 
+                   @click="checkColorAnswer($data, '#32CD32')" 
                    style="background-color: #32CD32;">
                 <span>Sus4</span>
               </div>
               <div class="color-option" 
-                   @click="checkColorAnswer($store, '#00BFFF')" 
+                   @click="checkColorAnswer($data, '#00BFFF')" 
                    style="background-color: #00BFFF;">
                 <span>Sus2</span>
+              </div>
+              <div class="color-option" 
+                   @click="checkColorAnswer($data, '#FF6347')" 
+                   style="background-color: #FF6347;">
+                <span>Dom7</span>
               </div>
             </div>
             
